dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@stream__writer__tests__client_control_channel_closed_during_flow_init_sent.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG event=on_send_flow_init prev=Init next=FlowInitSent location=dc/s2n-quic-dc/src/stream/writer.rs:805:21
0:00:00.000000000 DEBUG Sent FlowInit with early data stream_id=42 bytes_read=5 is_fin=false
0:00:00.000000000 DEBUG Writer dropping stream_id=42 status=FlowInitSent next_offset=5 inflight_bytes=5 remote_max_data=0
0:00:00.000000000 DEBUG event=on_shutdown prev=FlowInitSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:519:21
