dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@stream__writer__tests__client_fin_write_then_drop_emits_no_extra_packet.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG event=on_send_flow_init prev=Init next=FlowInitSent location=dc/s2n-quic-dc/src/stream/writer.rs:805:21
0:00:00.000000000 DEBUG event=on_send_fin prev=FlowInitSent next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs:808:25
0:00:00.000000000 DEBUG Sent FlowInit with early data stream_id=42 bytes_read=2 is_fin=true
0:00:00.000000000 DEBUG Writer dropping stream_id=42 status=FinSent next_offset=2 inflight_bytes=2 remote_max_data=0
0:00:00.000000000 DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:514:25
