dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@stream__writer__tests__client_second_write_blocks_until_max_data.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG event=on_send_flow_init prev=Init next=FlowInitSent location=dc/s2n-quic-dc/src/stream/writer.rs:805:21
0:00:00.000000000 DEBUG Sent FlowInit with early data stream_id=42 bytes_read=5 is_fin=false
0:00:00.000000000 DEBUG poll_remote_budget received messages stream_id=42 status=FlowInitSent msg_count=1
0:00:00.000000000 DEBUG event=on_flow_established prev=FlowInitSent next=Open location=dc/s2n-quic-dc/src/stream/writer.rs:712:44
0:00:00.000000000 DEBUG Flow established stream_id=42
0:00:00.000000000 DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs:956:29
0:00:00.000000000 DEBUG Writer dropping stream_id=42 status=FinSent next_offset=6 inflight_bytes=6 remote_max_data=4096
0:00:00.000000000 DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:514:25
